优化配置环境； 1.优化内存配置； 2.开启线程池； 3.自动部署应用； 4.清除默认用户；